// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetype renders component 1`] = `
<div
  className="archetype"
>
  <div
    className="archetypeStyle"
    style={
      Object {
        "background": "#4fe0c4",
      }
    }
  >
    <img
      alt="Conservative"
      src="https://cdn.traitify.com/frtq/conservative.png"
    />
    <h2>
      Your
       Financial Risk style is 
      <span>
        Conservative
      </span>
    </h2>
    <p>
      Description
    </p>
  </div>
  <div
    className="archetypeMeaning"
  >
    <h2>
      What does this tell me?
    </h2>
    <p>
      Analysis
    </p>
  </div>
</div>
`;

exports[`PersonalityArchetype renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetype renders nothing if not ready 1`] = `null`;

exports[`PersonalityArchetype renders perspective correctly 1`] = `
<div
  className="archetype"
>
  <div
    className="archetypeStyle"
    style={
      Object {
        "background": "#4fe0c4",
      }
    }
  >
    <img
      alt="Conservative"
      src="https://cdn.traitify.com/frtq/conservative.png"
    />
    <h2>
      Their
       Financial Risk style is 
      <span>
        Conservative
      </span>
    </h2>
    <p>
      Description
    </p>
  </div>
  <div
    className="archetypeMeaning"
  >
    <h2>
      What does this tell me?
    </h2>
    <p>
      Analysis
    </p>
  </div>
</div>
`;
